--- a/Registre_27/App.config
+++ b/Registre_27/App.config
@@ -38,7 +38,7 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value></value>
+        <value>Tahoma;12</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value />
