--- a/Registre_27/Registre_27.csproj
+++ b/Registre_27/Registre_27.csproj
@@ -149,6 +149,7 @@
     </Compile>
     <None Include="App.config" />
     <None Include="Properties\DataSources\cas.datasource" />
+    <None Include="Properties\DataSources\classAtachement.datasource" />
     <None Include="Properties\DataSources\classCas.datasource" />
     <None Include="Properties\DataSources\Classhokm.datasource" />
     <None Include="Properties\DataSources\ClassMahkama.datasource" />
